--- a/static/styles/variables.scss
+++ b/static/styles/variables.scss
@@ -1,2 +1,6 @@
-$nav-color: hsla(0, 100%, 100%, .90);
-$nav-shadow: hsla(0, 100%, 0%, .50);
+$nav-bg: black;
+$nav-color: white;
+$nav-active: hsla(0, 100%, 100%, .65);
+$page-transition: .75s;
+$content-bg: hsla(0, 100%, 100%, .75);
+$content-transition: .75s;
