--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -1,81 +1,91 @@
 html {
   height: 100%; }
 
-.bg-images {
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1;
+  background-color: black; }
+  nav a {
+    display: inline-block;
+    line-height: 56px;
+    font-size: 28px;
+    font-family: 'Sue Ellen Francisco', cursive;
+    text-decoration: none;
+    color: white;
+    margin: 0 15px;
+    cursor: pointer; }
+    nav a:hover, nav a.active {
+      -webkit-transition: 0.25s;
+      transition: 0.25s;
+      color: rgba(255, 255, 255, 0.65);
+      text-decoration: none; }
+
+.pages {
+  margin-top: 55px;
   display: flex; }
-  .bg-images > div {
+  .pages.active .page {
+    flex-basis: 5%; }
+  .pages .page {
     flex-basis: 20%;
     height: 1000px;
-    padding: 50px;
-    -webkit-transition: all 0.75s ease-out;
-    /* Safari 3.2+ */
-    transition: all 0.75s ease-out;
-    /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */ }
-    .bg-images > div:nth-of-type(1) {
-      background-image: url(/static/images/bg1.jpg);
+    -webkit-transition: 0.75s;
+    transition: 0.75s; }
+    .pages .page:nth-of-type(1) {
+      background-image: url(/static/images/round1_v01.jpg);
       background-position: 50% 50%;
       background-repeat: no-repeat;
       background-attachment: scroll;
       background-size: cover;
       -webkit-filter: grayscale(100%); }
-    .bg-images > div:nth-of-type(2) {
-      background-image: url(/static/images/bg2.jpg);
+    .pages .page:nth-of-type(2) {
+      background-image: url(/static/images/round2_v01.jpg);
       background-position: 50% 50%;
       background-repeat: no-repeat;
       background-attachment: scroll;
       background-size: cover;
       -webkit-filter: grayscale(100%); }
-    .bg-images > div:nth-of-type(3) {
-      background-image: url(/static/images/bg3.jpg);
+    .pages .page:nth-of-type(3) {
+      background-image: url(/static/images/round3_v01.jpg);
       background-position: 50% 50%;
       background-repeat: no-repeat;
       background-attachment: scroll;
       background-size: cover;
       -webkit-filter: grayscale(100%); }
-    .bg-images > div:nth-of-type(4) {
-      background-image: url(/static/images/bg4.jpg);
+    .pages .page:nth-of-type(4) {
+      background-image: url(/static/images/round4_v01.jpg);
       background-position: 50% 50%;
       background-repeat: no-repeat;
       background-attachment: scroll;
       background-size: cover;
       -webkit-filter: grayscale(100%); }
-    .bg-images > div:nth-of-type(5) {
-      background-image: url(/static/images/bg5.jpg);
+    .pages .page:nth-of-type(5) {
+      background-image: url(/static/images/round5_v01.jpg);
       background-position: 50% 50%;
       background-repeat: no-repeat;
       background-attachment: scroll;
       background-size: cover;
       -webkit-filter: grayscale(100%); }
-    .bg-images > div:hover {
+    .pages .page.active {
       -webkit-filter: grayscale(0%);
-      flex-basis: 200%; }
-      .bg-images > div:hover .content-box {
-        display: block; }
+      flex-basis: 80%; }
+      .pages .page.active .content {
+        opacity: 1;
+        -webkit-transform: translateY(0);
+        transform: translateY(0); }
 
-.header {
-  background-color: black; }
-  .header a {
-    font-family: 'Reenie Beanie', cursive;
-    color: rgba(255, 255, 255, 0.9);
-    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
-    margin-right: 25px;
-    -webkit-transition: all 0.25s ease-out;
-    /* Safari 3.2+ */
-    transition: all 0.25s ease-out;
-    /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */ }
-    .header a:hover {
-      text-decoration: none;
-      color: rgba(0, 0, 0, 0.5);
-      text-shadow: 2px 2px 2px rgba(255, 255, 255, 0.9); }
-
-.content-box {
-  background-color: rgba(255, 255, 255, 0.5);
-  border-radius: 5px;
+.content {
+  font-size: 16px;
+  background-color: rgba(255, 255, 255, 0.75);
+  border-radius: 10px;
+  margin: 25px;
   padding: 25px;
-  display: none;
-  -webkit-transition: all 0.75s ease-out;
-  /* Safari 3.2+ */
-  transition: all 0.75s ease-out;
-  /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */ }
-  .content-box p:after {
+  opacity: 0;
+  -webkit-transition: 0.75s 0.75s;
+  transition: 0.75s 0.75s;
+  -webkit-transform: translateY(-1000px);
+  transform: translateY(-1000px); }
+  .content p:after {
     content: "Bacon ipsum dolor sit amet ham flank strip steak rump landjaeger brisket, ball tip pork chop biltong. \ Porchetta rump boudin kevin ribeye. Ribeye frankfurter ham andouille, capicola shank pig tri-tip fatback leberkas tongue shankle. \ Drumstick t-bone sirloin shoulder, tri-tip capicola chuck beef ground round ham meatloaf jowl frankfurter salami."; }
