--- a/static/styles/mixins.scss
+++ b/static/styles/mixins.scss
@@ -1,21 +1,47 @@
-@mixin transition($duration) {
-    -webkit-transition: all #{$duration} ease-out;  /* Safari 3.2+ */
-            transition: all #{$duration} ease-out;  /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+@mixin transition($value) {
+    -webkit-transition: #{$value}; // Safari 3.2+
+            transition: #{$value}; // Chrome 26, Firefox 16+, IE 10+, Opera 12.10+
 }
 
-@mixin transition($duration) {
-    -webkit-transition: all #{$duration} ease-out;  /* Safari 3.2+ */
-            transition: all #{$duration} ease-out;  /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+@mixin transform($value) {
+    -webkit-transform: #{$value};  // Chrome, Safari 3.1+
+            transform: #{$value};  // Firefox 16+, IE 10+, Opera 12.10+
 }
 
+@mixin grayscale($percent) {
+    -webkit-filter: grayscale($percent); // Chrome 19+, Safari 6+
+//    $grayscale: 100%;
+//    $svg: '';
+//    @if $state == 'on' {
+//        $grayscale: 100%;
+//        $svg: '.33 .33 .33 0 0
+//               .33 .33 .33 0 0
+//               .33 .33 .33 0 0
+//               0   0   0   1 0';
+//    } @else {
+//        $grayscale: 0%;
+//        $svg: '1 0 0 0 0
+//               0 1 0 0 0
+//               0 0 1 0 0
+//               0 0 0 1 0';
+//    }
+//    filter: url("data:image/svg+xml,
+//        <svg xmlns='http://www.w3.org/2000/svg'>
+//            <filter id='grayscale'>
+//                <feColorMatrix type='matrix' values='#{$svg}' />
+//            </filter>
+//        </svg>#grayscale");                // Firefox 10+, Firefox on Android
+//    filter: gray;                          // IE6-9
+
+}
 
 @mixin bg-image($i) {
     &:nth-of-type(#{$i}) {
-        background-image: url(/static/images/bg#{$i}.jpg);
+        background-image: url(/static/images/round#{$i}_v01.jpg);
         background-position: 50% 50%;
         background-repeat: no-repeat;
         background-attachment: scroll;
         background-size: cover;
-        -webkit-filter: grayscale(100%);
+        @include grayscale(100%);
     }
 }
