--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -27,7 +27,7 @@
 <div class="sections" ng-class="{active: section}">
 <div section="couple" class="section container-fluid">
     <div class="content">
-        <span section class="close-btn glyphicon glyphicon-remove-circle"></span>
+        <span section class="close-btn pull-right glyphicon glyphicon-remove-circle"></span>
         <h4>Kellen and Alison</h4>
 
         <p>Bacon ipsum dolor sit amet turkey swine pork, short ribs pork loin beef ribs brisket tenderloin tongue jerky
